tests/paczka2/big_fuzzy/37998771.err
Error in line 16: BT7hIhu9Aw A894 -2,1
Error in line 17: A894 A894 55,0
Error in line 14: wrVLK7JDICl S668 33,7
Error in line 15: BT7hIhu9Aw A894 63,4
Error in line 19: A894 S699 26,6
Error in line 4: H7hH3rEe A894 43,9
Error in line 32: H7hH3rEe S747 43,8
Error in line 39: O7zK4J S668 54,4
Error in line 37: H7hH3rEe S699 13,2
Error in line 35: wrVLK7JDICl A894 151,5
Error in line 46: tSC S699 16,1
Error in line 43: H7hH3rEe A894 10,2
Error in line 53: H7hH3rEe S747 -4,0
Error in line 45: yJkVqZMIRI S668 7,6
Error in line 49: A894 S668 0,9
Error in line 65: wrVLK7JDICl S747 150,42
Error in line 62: tSC S668 29,0
Error in line 63: H7hH3rEe S747 17,0
Error in line 70: A894 S668 44,4
Error in line 75: BT7hIhu9Aw S699 29,4
Error in line 66: O7zK4J S699 43,0
Error in line 78: tSC S747 -3,0
Error in line 86: yJkVqZMIRI S699 19,1
Error in line 56: wrVLK7JDICl S747 37,0
Error in line 67: tSC S747 99,5
Error in line 89: tSC S668 97,6
Error in line 87: yJkVqZMIRI S747 61,5
Error in line 93: tSC A894 27,7
Error in line 99: yJkVqZMIRI S747 75,9
Error in line 106: yJkVqZMIRI S699 47,9
Error in line 126: O7zK4J S747 96,1
Error in line 136: O7zK4J A894 42,5
Error in line 131: A894 S668 51,9
Error in line 130: H7hH3rEe S699 122,5
Error in line 144: yJkVqZMIRI S668 20,8
Error in line 147: tSC S699 25,3
Error in line 142: H7hH3rEe A894 0,2
Error in line 148: tSC S668 16,5
Error in line 156: A894 S747 -1,2
Error in line 154: A894 S747 76,0
Error in line 161: A894 A894 92,4
Error in line 151: H7hH3rEe S668 88,4
Error in line 172: tSC S747 50,4
Error in line 165: yJkVqZMIRI A894 67,3
Error in line 160: wrVLK7JDICl S668 51,2
Error in line 193: wrVLK7JDICl S699 28,6
Error in line 191: H7hH3rEe S747 85,1
Error in line 197: H7hH3rEe A894 48,6
Error in line 200: H7hH3rEe S747 8,6
Error in line 196: yJkVqZMIRI S699 21,6
Error in line 207: yJkVqZMIRI S747 51,8
Error in line 213: A894 S699 87,0
Error in line 230: O7zK4J S668 23,2
Error in line 221: yJkVqZMIRI A894 1,6
